--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     />
 
     <!-- Primary Meta Tags -->
-    <title>Shadcn/React - Landing template</title>
+    <title>LearnSync</title>
     <meta
       name="title"
-      content="Shadcn/React - Landing template"
+      content="LeanSync/ui"
     />
     <meta
       name="description"
-      content="Free Shadcn landing page for React developers"
+      content="Free Edtech platform "
     />
     <!-- Open Graph / Facebook -->
     <meta
@@ -30,19 +30,19 @@
     />
     <meta
       property="og:url"
-      content="https://github.com/leoMirandaa/shadcn-landing-page.git"
+      content=""
     />
     <meta
       property="og:title"
-      content="Shadcn/React - Landing template"
+      content=""
     />
     <meta
       property="og:description"
-      content="Free Shadcn landing page for React developers"
+      content=""
     />
     <meta
       property="og:image"
-      content="https://res.cloudinary.com/dbzv9xfjp/image/upload/v1705560686/og-images/shadc-react_gketpd.jpg"
+      content=""
     />
 
     <!-- Twitter -->
@@ -53,20 +53,9 @@
 
     <meta
       name="twitter:url"
-      content="https://github.com/leoMirandaa/shadcn-landing-page.git"
+      content=""
     />
-    <meta
-      name="twitter:title"
-      content="Shadcn/React - Landing template"
-    />
-    <meta
-      name="twitter:description"
-      content="Free Shadcn landing page for React developers"
-    />
-    <meta
-      name="twitter:image"
-      content="https://res.cloudinary.com/dbzv9xfjp/image/upload/v1705560686/og-images/shadc-react_gketpd.jpg"
-    />
+   
   </head>
   <body>
     <div id="root"></div>
